# jvmoonshot-xxvi

./: LICENSE  README.md  docker-compose.yml  info.json  pom.xml
docker/: Dockerfile.api  docker-compose.yml
src/main/java/com/github/gb/moonshot/: Dataset.java  FraudScoreHandler.java  MoonShot.java  WarmupDriver.java
src/main/java/com/github/gb/moonshot/bench/: BankFileFormat.java  BuildKdTree.java  BuildPayloadBank.java  CliArgs.java  PayloadBankIO.java
src/main/java/com/github/gb/moonshot/codec/: ResponseEncoder.java  ScoringRequest.java  ScoringRequestParser.java  ScoringRequestScratch.java
src/main/java/com/github/gb/moonshot/http/: FdConnHandler.java  FdPassing.java  FdReceiver.java  HttpConnection.java  NioAotTraining.java  NioHttpServer.java  Router.java
src/main/java/com/github/gb/moonshot/instrumentation/: StageTimer.java
src/main/java/com/github/gb/moonshot/search/: IvfFlatIndex.java  KdTree.java  KdTreeBuilder.java  KdTreeIO.java  KdTreeLayout.java  KdTreeMmap.java  KdTreeProbes.java  KdTreeScratch.java  KdTreeTuning.java  KdTreeUnsafe.java  SimdBruteForceIndex.java  StubVectorIndex.java  TopKSortedArray.java  VectorIndex.java
src/main/java/com/github/gb/moonshot/vector/: MccRiskTable.java  NormalizationConstants.java  Vectorizer.java
src/main/lapada/: Cargo.toml  Dockerfile
src/main/lapada/src/: main.rs
